# openemr-zoom-integration

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.override.yml.example  docker-compose.staging.yml  docker-compose.yml
server/: Dockerfile  alembic.ini  config.py  pyproject.toml  run.py
server/app/: __init__.py  extensions.py  models.py
server/migrations/: env.py
server/scripts/: entrypoint.sh  rotate-encryption-key.py  start-dev.sh  start-prod.sh  start-staging.sh  start.sh  test.sh
server/tests/: auth_utils.py  conftest.py  test_blueprint_audit.py  test_blueprint_auth.py  test_blueprint_config.py  test_blueprint_demo.py  test_blueprint_ehr_context.py  test_blueprint_epic_communication.py  test_blueprint_epic_config.py  test_blueprint_epic_outbound.py  test_blueprint_epic_patient.py  test_blueprint_epic_practitioner.py  test_blueprint_epic_screenpop.py  test_blueprint_epic_token.py  test_blueprint_openemr.py  test_blueprint_veradigm.py  test_blueprint_webhooks.py  test_blueprint_zoom.py  test_epic_oauth_reuse.py  test_jwks.py  test_jwt_assertion.py  test_migration_demo_patient_overrides.py  test_migration_meeting_records.py  test_migration_provider_mappings.py  test_migration_timezone.py  test_migration_zoom_account_registration_updates.py  test_patch_zoom_listener_module.py  test_routes.py  test_seed_data_sql.py  test_services_appointment_filters.py  test_services_appointment_generate.py  test_services_appointment_processor.py  test_services_appointment_status.py  test_services_audit.py  test_services_encounter.py  (+10 more)
(+208 files in other folders)
