[project]
name = "zoomly-server"
version = "0.1.0"
description = "Zoom / OpenEMR integration Backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.6.9",
    "cryptography>=46.0.6",
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
dev = [
    "httpie>=3.2.4",
    "pytest>=9.0.2",
]
