[project]
name = "zoomly-server"
version = "0.1.0"
description = "Zoom / OpenEMR integration Backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "authlib>=1.6.9",
    "concurrent-log-handler>=0.9.29",
    "cryptography>=46.0.6",
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=25.3.0",
    "psycopg2-binary>=2.9.12",
    "pyjwt>=2.12.1",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.48",
    "sqlalchemy-utils>=0.42.1",
]

[dependency-groups]
dev = [
    "httpie>=3.2.4",
    "pytest>=9.0.2",
]
